--- a/resources/lang/bn.json
+++ b/resources/lang/bn.json
@@ -2,9 +2,12 @@
     "Name (In English)" : "নাম (ইংরেজীতে)",
     "Laravel" : "লারাভেল",
     "Category" : "ক্যাটেগরি",
+    "Subcategory" : "সাব ক্যাটেগরি",
+    "Subcategories" : "সাব ক্যাটেগরিসমূহ",
     "Categories" : "ক্যাটেগরিসমূহ",
     "Add" : "যোগ করুন",
     "SL" : "ক্রমিক নং",
+    "List" : "তালিকা",
     "Name (In English)" : "নাম (ইংরেজীতে)",
     "Name (In Bangla)" : "নাম (বাংলায়)",
     "Is Active" : "সক্রিয় কিনা?",
@@ -23,5 +26,20 @@
     "Register" : "রেজিষ্টার",
     "Developed" : "তৈরি",
     "by" : "করেছেন",
-    "Remon Hasan Apu" : "রিমন হাছান অপু"
+    "Remon Hasan Apu" : "রিমন হাছান অপু",
+
+    "______COMMENT_2" : "Products",
+    "Product" : "পণ্য",
+    "Products" : "পণ্যসমূহ",
+    "Image" : "ছবি",
+    "Is Active?" : "সক্রিয়?",
+    "View" : "দেখুন",
+    "Edit" : "সম্পাদনা",
+    "Description" : "বর্ণনা",
+    "Price" : "মূল্য",
+    "Discount" : "ছাড় মূল্য",
+    "Size" : "সাইজ",
+    "Status" : "স্ট্যাটাস",
+    "Price Including Discount" : "ছাড়সহ মূল্য",
+    "Available Status" : "পণ্য পাওয়ার স্ট্যাটাস"
 }
