--- a/resources/lang/bn.json
+++ b/resources/lang/bn.json
@@ -13,8 +13,15 @@
     "Add" : "যোগ করুন",
     "SL" : "ক্রমিক নং",
     "List" : "তালিকা",
-    "Name (In English)" : "নাম (ইংরেজীতে)",
-    "Name (In Bangla)" : "নাম (বাংলায়)",
+    "Name ( In English )" : "নাম (ইংরেজীতে)",
+    "Name ( In Bangla )" : "নাম (বাংলায়)",
+    "Active" : "সক্রিয়",
+    "Inactive" : "সক্রিয় নয়",
+    "Create New Category" : "নতুন ক্যাটাগরি তৈরি করুন",
+    "Save" : "সংরক্ষণ করুন",
+    "Edit Category" : "ক্যাটেগরি সম্পাদনা করুন",
+    "Update" : "আপডেট",
+    "Actions" : "অ্যাকশনস",
     "Is Active" : "সক্রিয় কিনা?",
     "Created at" : "তৈরি হয়েছে",
     "Action" : "অ্যাকশন",
