--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -8,6 +8,13 @@
     "List" : "List",
     "Name (In English)" : "Name (In English)",
     "Name (In Bangla)" : "Name (In Bangla)",
+    "Active" : "Active",
+    "Inactive" : "Inactive",
+    "Create New Category" : "Create New Category",
+    "Save" : "Save",
+    "Edit Category" : "Edit Category",
+    "Update" : "Update",
+    "Actions" : "Actions",
     "Is Active" : "Is Active",
     "Action" : "Action",
     "Sorry! No data found to display" : "Sorry! No data found to display",
